fix sidebar shadow not showing up

--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@
   grid-area: controls;
   background: white;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 
 .App-dropzone {
